src/objects/Scorecard__c.object
<CustomObject>
    <description>This is the ScorecardObject</description>
    <fields>
        <fullName>Approver_s_Comments__c</fullName>
        <inlineHelpText>Comments entered by Approver - mostly required when rejecting a scorecard as this will be sent to submitters</inlineHelpText>
        <label>Approver&apos;s Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Audience_Size__c</fullName>
        <description>Audience size for given survey.</description>
        <label>Audience Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CT_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CT Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Capacity_Rollup_Score__c</fullName>
        <label>Capacity Rollup Score</label>
        <summarizedField>Scorecard_Answer__c.Score__c</summarizedField>
        <summaryFilterItems>
            <field>Scorecard_Answer__c.Question_Type2__c</field>
            <operation>equals</operation>
            <value>capacity</value>
        </summaryFilterItems>
        <summaryForeignKey>Scorecard_Answer__c.Scorecard__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Capacity_Score__c</fullName>
        <label>Capacity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conservation_Rollup_Score__c</fullName>
        <label>Conservation Rollup Score</label>
        <summarizedField>Scorecard_Answer__c.Score__c</summarizedField>
        <summaryFilterItems>
            <field>Scorecard_Answer__c.Question_Type2__c</field>
            <operation>equals</operation>
            <value>conservation</value>
        </summaryFilterItems>
        <summaryForeignKey>Scorecard_Answer__c.Scorecard__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Conservation_Score__c</fullName>
        <label>Conservation Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Constituency_Rollup_Score__c</fullName>
        <label>Constituency Rollup Score</label>
        <summarizedField>Scorecard_Answer__c.Score__c</summarizedField>
        <summaryFilterItems>
            <field>Scorecard_Answer__c.Question_Type2__c</field>
            <operation>equals</operation>
            <value>constituency</value>
        </summaryFilterItems>
        <summaryForeignKey>Scorecard_Answer__c.Scorecard__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Constituency_Score__c</fullName>
        <label>Constituency Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KAP_Survey_Date__c</fullName>
        <description>Date the survey was administered.</description>
        <label>KAP Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Months__c</fullName>
        <formula>ROUND((((Submission_Date__c -  RARE_Campaign__r.Start_Date__c) /7)/4), 0)</formula>
        <label>Number of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Post_Campaign__c</fullName>
        <description>Was this survey administered Pre or Post Campaign.</description>
        <inlineHelpText>Was this survey administered Pre or Post Campaign.</inlineHelpText>
        <label>Pre/Post Campaign</label>
        <picklist>
            <picklistValues>
                <fullName>Pre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RARE_Campaign__c</fullName>
        <label>RARE Campaign</label>
        <referenceTo>RARE_Campaign__c</referenceTo>
        <relationshipLabel>Scorecards</relationshipLabel>
        <relationshipName>Score_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rank</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Pride Scorecard source is for the CT sync; KAP survey is for survey entered via DMT/pre- and post-campaign surveys.</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Pride Scorecard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>KAP Survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <formula>IMAGE(
IF ( LOWER(Grade__c) == &quot;green&quot;, &quot;/img/msg_icons/confirm16.png&quot;,

IF (LOWER(Grade__c) == &quot;yellow&quot;, &quot;/img/msg_icons/warning16.png&quot;,
&quot;/img/msg_icons/error16.png&quot;)
),
&quot;Status Flag&quot;
)</formula>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submission_Status__c</fullName>
        <description>Set by Submission Process</description>
        <inlineHelpText>Set by Submission Process</inlineHelpText>
        <label>Submission Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Send Submission Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submission Email Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Survey ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <description>KAP Survey name (combination of Campaign Code, &quot;KAP&quot;, and Pre/Post to indicate whether the survey was administered pre- or post-campaign)</description>
        <label>Survey Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <description>Targeted audience for a given survey.</description>
        <label>Target Audience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>Conservation_Rollup_Score__c  + Constituency_Rollup_Score__c  + Capacity_Rollup_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Scorecard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Score__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>RARE_Campaign__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Score Card ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecards</pluralLabel>
    <recordTypes>
        <fullName>KAP</fullName>
        <active>true</active>
        <description>KAP survey information from pre- and post-campaign</description>
        <label>KAP</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSC</fullName>
        <active>true</active>
        <description>Pride Scorecord record type</description>
        <label>PSC</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>